--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -85,7 +85,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <canvas id="chart-bars" class="chart-canvas" height="170"></canvas>
+                  <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="170"></canvas>
                 </div>
               </div>
             </div>
