--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -79,9 +79,10 @@
           </div>
         </div>
       </div>
+      <!-- START charts -->
       <div class="row mt-4">
-        <div class="col-lg-4 col-md-6 mt-4 mb-4">
-          <div class="card z-index-2 ">
+        <div class="card mb-3">
+          <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
                 <div class="chart">
@@ -93,15 +94,12 @@
               <h6 class="mb-0 ">Site Surveys</h6>
               <p class="text-sm ">Surveys per site.</p>
               <hr class="dark horizontal">
-              <div class="d-flex ">
-                <i class="material-icons text-sm my-auto me-1">schedule</i>
-                <p class="mb-0 text-sm"> campaign sent 2 days ago </p>
-              </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mt-4 mb-4">
-          <div class="card z-index-2  ">
+        <div class="row mt-4">
+        <div class="card mb-3">
+          <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
               <div class="bg-gradient-success shadow-success border-radius-lg py-3 pe-1">
                 <div class="chart">
@@ -113,15 +111,13 @@
               <h6 class="mb-0 "> Monthly Surveys </h6>
               <p class="text-sm "> Surveys per month. </p>
               <hr class="dark horizontal">
-              <div class="d-flex ">
-                <i class="material-icons text-sm my-auto me-1">schedule</i>
-                <p class="mb-0 text-sm"> updated 4 min ago </p>
-              </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-4 mb-3">
-          <div class="card z-index-2 ">
+        </div>
+        <div class="row mt-4">
+        <div class="card mb-3">
+          <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
               <div class="bg-gradient-dark shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
@@ -133,14 +129,11 @@
               <h6 class="mb-0 ">System Surveys</h6>
               <p class="text-sm ">Surveys per system type.</p>
               <hr class="dark horizontal">
-              <div class="d-flex ">
-                <i class="material-icons text-sm my-auto me-1">schedule</i>
-                <p class="mb-0 text-sm">just updated</p>
-              </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- END charts -->
       <div class="row mb-4">
         <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
           <div class="card">
