--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -81,27 +81,10 @@
       </div>
       <!-- START charts -->
       <div class="row mt-4">
-        <div class="card mb-3">
-          <div class="card-body p-3">
+        <div class="col-lg-4 col-md-6 mt-4 mb-4">
+          <div class="card z-index-2 ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
-              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                <div class="chart">
-                  <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="170"></canvas>
-                </div>
-              </div>
-            </div>
-            <div class="card-body">
-              <h6 class="mb-0 ">Site Surveys</h6>
-              <p class="text-sm ">Surveys per site.</p>
-              <hr class="dark horizontal">
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4">
-        <div class="card mb-3">
-          <div class="card-body p-3">
-            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
-              <div class="bg-gradient-success shadow-success border-radius-lg py-3 pe-1">
+              <div class="shadow-success border-radius-lg py-3 pe-1">
                 <div class="chart">
                   <canvas id="chartSurveyCount" data-url="{% url 'chart_surveycount' %}" class="chart-canvas" height="170"></canvas>
                 </div>
@@ -114,12 +97,10 @@
             </div>
           </div>
         </div>
-        </div>
-        <div class="row mt-4">
-        <div class="card mb-3">
-          <div class="card-body p-3">
+        <div class="col-lg-4 col-md-6 mt-4 mb-4">
+          <div class="card z-index-2  ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
-              <div class="bg-gradient-dark shadow-dark border-radius-lg py-3 pe-1">
+              <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
                   <canvas id="chartSurveySystemCount" data-url="{% url 'chart_surveysystemcount' %}" class="chart-canvas" height="170"></canvas>
                 </div>
@@ -133,6 +114,25 @@
           </div>
         </div>
       </div>
+      <div class="row mt-4">
+        <div class="card mb-3">
+          <div class="card-body p-3">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
+              <div class="shadow-primary border-radius-lg py-3 pe-1">
+                <div class="chart">
+                  <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="170"></canvas>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <h6 class="mb-0 ">Site Surveys</h6>
+              <p class="text-sm ">Surveys per site.</p>
+              <hr class="dark horizontal">
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- END charts -->
       <div class="row mb-4">
         <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
