--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -84,7 +84,7 @@
         <div class="col-lg-6 col-md-6 mt-4 mb-4">
           <div class="card z-index-2 ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-              <div class="shadow-dark border-radius-lg py-3 pe-1">
+              <div class="bg-gray-200 shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
                   <canvas id="chartSurveyCount" data-url="{% url 'chart_surveycount' %}" class="chart-canvas" height="170"></canvas>
                 </div>
@@ -100,7 +100,7 @@
         <div class="col-lg-6 col-md-6 mt-4 mb-4">
           <div class="card z-index-2  ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-              <div class="shadow-dark border-radius-lg py-3 pe-1">
+              <div class="bg-gray-200 shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
                   <canvas id="chartSurveySystemCount" data-url="{% url 'chart_surveysystemcount' %}" class="chart-canvas" height="170"></canvas>
                 </div>
@@ -118,7 +118,7 @@
         <div class="card mb-3">
           <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-              <div class="shadow-dark border-radius-lg py-3 pe-1">
+              <div class="bg-gray-200 shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
                   <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="170"></canvas>
                 </div>
