--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -82,11 +82,11 @@
       <!-- START charts -->
       <div class="row mt-4">
         <div class="col-lg-6 col-md-6 mt-4 mb-4">
-          <div class="card z-index-2 ">
-            <div class="bg-gray-200 card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+          <div class="bg-gray-200 card z-index-2 ">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <canvas id="chartSurveyCount" data-url="{% url 'chart_surveycount' %}" class="chart-canvas" height="170"></canvas>
+                  <canvas id="chartSurveyCount" data-url="{% url 'chart_surveycount' %}" class="chart-canvas" height="200"></canvas>
                 </div>
               </div>
             </div>
@@ -98,11 +98,11 @@
           </div>
         </div>
         <div class="col-lg-6 col-md-6 mt-4 mb-4">
-          <div class="card z-index-2  ">
-            <div class="bg-gray-200 card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+          <div class="bg-gray-200 card z-index-2  ">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <canvas id="chartSurveySystemCount" data-url="{% url 'chart_surveysystemcount' %}" class="chart-canvas" height="170"></canvas>
+                  <canvas id="chartSurveySystemCount" data-url="{% url 'chart_surveysystemcount' %}" class="chart-canvas" height="200"></canvas>
                 </div>
               </div>
             </div>
@@ -116,11 +116,11 @@
       </div>
       <div class="row mt-4">
         <div class="card mb-3">
-          <div class="card-body p-3">
-            <div class="bg-gray-200 card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+          <div class="bg-gray-200 card-body p-3">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="170"></canvas>
+                  <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="200"></canvas>
                 </div>
               </div>
             </div>
