--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -86,7 +86,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <canvas id="chartSurveyCount" data-url="{% url 'chart_surveycount' %}" class="chart-canvas" height="200"></canvas>
+                  <canvas id="chartSurveyCount" data-url="{% url 'chart_surveycount' %}" class="chart-canvas" height="250"></canvas>
                 </div>
               </div>
             </div>
@@ -102,7 +102,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <canvas id="chartSurveySystemCount" data-url="{% url 'chart_surveysystemcount' %}" class="chart-canvas" height="200"></canvas>
+                  <canvas id="chartSurveySystemCount" data-url="{% url 'chart_surveysystemcount' %}" class="chart-canvas" height="250"></canvas>
                 </div>
               </div>
             </div>
@@ -115,12 +115,12 @@
         </div>
       </div>
       <div class="row mt-4">
-        <div class="card mb-3">
-          <div class="bg-gray-200 card-body p-3">
+        <div class="bg-gray-200 card mb-3">
+          <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="200"></canvas>
+                  <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="250"></canvas>
                 </div>
               </div>
             </div>
