Fixed incorrect queryset in dashboard index

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -21,6 +21,10 @@
                 <h4 id="surveyTotal" class="mb-0"></h4>
               </div>
             </div>
+            <hr class="dark horizontal my-0">
+            <div class="card-footer p-3">
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+5% </span>than yesterday</p>
+            </div>
           </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
@@ -33,6 +37,10 @@
                 <p class="text-sm mb-0 text-capitalize">Total Filters</p>
                 <h4 id="filterTotal" class="mb-0"></h4>
               </div>
+            </div>
+            <hr class="dark horizontal my-0">
+            <div class="card-footer p-3">
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+5% </span>than yesterday</p>
             </div>
           </div>
         </div>
