--- a/frontend/templates/home/django-material-kit/project-detail.html
+++ b/frontend/templates/home/django-material-kit/project-detail.html
@@ -42,8 +42,8 @@
               <h5 class="font-weight-bolder mt-3">Description</h5>
               <p class="pe-5">{{ project.project_description }}</p>
             {% endif %}
-            {{ markers|json_script:"markers-data" }}
-            <div id="map"></div>
+            <!-- {{ markers|json_script:"markers-data" }} -->
+            <div id="map" data-url="{% url 'map_projectsurvey' pk %}"></div>
             <p id="map_empty" class="lead"></p>
           </div>
         <!-- -------- END Grids -------- -->
@@ -59,5 +59,6 @@
      integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
      crossorigin=""></script>
   <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="{% static 'assets/js/map-cluster.js' %}"></script>
 {% endblock javascripts %}
