--- a/frontend/templates/home/django-material-kit/project-detail.html
+++ b/frontend/templates/home/django-material-kit/project-detail.html
@@ -42,7 +42,6 @@
               <h5 class="font-weight-bolder mt-3">Description</h5>
               <p class="pe-5">{{ project.project_description }}</p>
             {% endif %}
-            <!-- {{ markers|json_script:"markers-data" }} -->
             <div id="map_loading" class="d-flex justify-content-center">
               <button class="btn btn-primary" type="button" disabled>
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -50,7 +49,7 @@
               </button>
             </div>
             <div id="map" data-url="{% url 'map_projectsurvey' pk %}"></div>
-            <p id="map_empty" class="lead"></p>
+            <div id="map_empty" class="d-flex justify-content-center lead"></div>
           </div>
         <!-- -------- END Grids -------- -->
       </div>
