--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -22,15 +22,19 @@
         </li>
         {% if perms.field_site %}
           <!-- begin field site -->
-          <li class="nav-item mt-3 accordion" id="accordionFieldSite">
+        <div class="accordion" id="accordionFieldSite">
+
             <div class="card">
               <div class="card-header" id="headingFieldSite">
+                <li class="nav-item mt-3">
                 <a data-toggle="collapse" href="#collapseFieldSite" role="button" aria-expanded="false" aria-controls="collapseFieldSite">
                   <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
                 </a>
+                 </li>
               </div>
             </div>
-          </li>
+
+        </div>
 
         <div id="collapseFieldSite" class="collapse show" aria-labelledby="headingFieldSite" data-parent="#accordionFieldSite">
           <div class="card-body">
