--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -22,22 +22,13 @@
         </li>
         {% if perms.field_site %}
           <!-- begin field site -->
-        <div class="accordion" id="accordionFieldSite">
-
-            <div class="card">
-              <div class="card-header" id="headingFieldSite">
+            <a data-toggle="collapse" href="#collapseFieldSite" role="button" aria-expanded="false" aria-controls="collapseFieldSite">
                 <li class="nav-item mt-3">
-                <a data-toggle="collapse" href="#collapseFieldSite" role="button" aria-expanded="false" aria-controls="collapseFieldSite">
                   <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
-                </a>
                  </li>
-              </div>
-            </div>
+              </a>
 
-        </div>
-
-        <div id="collapseFieldSite" class="collapse show" aria-labelledby="headingFieldSite" data-parent="#accordionFieldSite">
-          <div class="card-body">
+        <div class="collapse" id="collapseFieldSite">
             {% if perms.field_site.view_fieldsite %}
             <li class="nav-item">
               <a class="nav-link text-white {% if 'view_fieldsite' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'view_fieldsite' %}">
@@ -59,7 +50,7 @@
             </li>
             {% endif %}
           </div>
-        </div>
+
         <!-- end field site -->
         {% endif %}
         {% if perms.sample_label %}
