--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -24,13 +24,12 @@
           <!-- begin field site -->
         <li class="nav-item mt-3">
             <a data-toggle="collapse" href="#collapseFieldSite" role="button" aria-expanded="false" aria-controls="collapseFieldSite">
-
-                  <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
-
-              </a>
+              <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
+            </a>
         </li>
 
         <div class="collapse" id="collapseFieldSite">
+          <div class="card card-body">
             {% if perms.field_site.view_fieldsite %}
             <li class="nav-item">
               <a class="nav-link text-white {% if 'view_fieldsite' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'view_fieldsite' %}">
@@ -51,6 +50,7 @@
               </a>
             </li>
             {% endif %}
+          </div>
           </div>
 
         <!-- end field site -->
