--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -81,8 +81,8 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white {% if 'dashboard_profile' in segment %} active bg-gradient-primary {% endif %}"
-             href="{% url 'dashboard_profile' %}">
+          <a class="nav-link text-white {% if 'detail_dashboardprofile' in segment %} active bg-gradient-primary {% endif %}"
+             href="{% url 'detail_dashboardprofile' %}">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">person</i>
             </div>
