--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -34,13 +34,14 @@
                 <i class="material-icons opacity-10">filter_alt</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Total Filters</p>
-                <h4 id="filterTotal" class="mb-0"></h4>
+                <p class="text-sm mb-0 text-capitalize">Total Field Samples</p>
+                <h4 id="$fieldSampleTotal" class="mb-0"></h4>
               </div>
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+5% </span>than yesterday</p>
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">Filters</span><span id="filterTotal"></span></p>
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">SubCores</span></span><span id="subCoreTotal"></span></p>
             </div>
           </div>
         </div>
@@ -134,6 +135,24 @@
       </div>
       <!-- END survey charts -->
       <!-- START filter charts -->
+      <div class="row mt-4">
+        <div class="bg-gray-200 card mb-3">
+          <div class="card-body p-3">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+              <div class="shadow-dark border-radius-lg py-3 pe-1">
+                <div class="chart">
+                  <canvas id="chartFieldSampleCount" data-url="{%url 'chart_fieldsamplecount' %}" class="chart-canvas" height="250"></canvas>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <h6 class="mb-0 ">Field Samples</h6>
+              <p class="text-sm ">Field samples per month.</p>
+              <hr class="dark horizontal">
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row mt-4">
         <div class="col-lg-6 col-md-6 mt-4 mb-4">
           <div class="bg-gray-200 card z-index-2 ">
@@ -542,5 +561,6 @@
 {% block javascripts %}
 <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="{% static 'assets/js/index-charts.js' %}"></script>
+<script src="https://cdn.rawgit.com/jotavejv/palette-js/d482cf3/dist/palette.min.js"></script>
+<script src="{% static 'assets/js/fieldsurvey-charts.js' %}"></script>
 {% endblock javascripts %}
