updated frontend chart js

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -40,8 +40,7 @@
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">Filters</span><span id="filterTotal"></span></p>
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">SubCores</span></span><span id="subCoreTotal"></span></p>
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">Filters: </span><span id="filterTotal"></span> | <span class="text-success text-sm font-weight-bolder">SubCores: </span><span id="subCoreTotal"></span></p>
             </div>
           </div>
         </div>
@@ -562,5 +561,5 @@
 <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.rawgit.com/jotavejv/palette-js/d482cf3/dist/palette.min.js"></script>
-<script src="{% static 'assets/js/fieldsurvey-charts.js' %}"></script>
+<script src="{% static 'assets/js/charts-fieldsurvey.js' %}"></script>
 {% endblock javascripts %}
