added zeros to ts plots

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -35,7 +35,7 @@
               </div>
               <div class="text-end pt-1">
                 <p class="text-sm mb-0 text-capitalize">Total Field Samples</p>
-                <h4 id="$fieldSampleTotal" class="mb-0"></h4>
+                <h4 id="fieldSampleTotal" class="mb-0"></h4>
               </div>
             </div>
             <hr class="dark horizontal my-0">
