added check for data when populating charts for 0 values

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -40,7 +40,10 @@
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">Filters: </span><span id="filterTotal"></span> | <span class="text-success text-sm font-weight-bolder">SubCores: </span><span id="subCoreTotal"></span></p>
+              <p class="mb-0">
+                <span class="text-success text-sm font-weight-bolder">Filters: </span><span id="filterTotal"></span>
+                | <span class="text-success text-sm font-weight-bolder">SubCores: </span><span id="subCoreTotal"></span>
+              </p>
             </div>
           </div>
         </div>
