changed palette js

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -582,6 +582,6 @@
 {% block javascripts %}
 <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.rawgit.com/jotavejv/palette-js/d482cf3/dist/palette.min.js"></script>
+<script src="{% static 'assets/js/plugins/palette.js' %}"></script>
 <script src="{% static 'assets/js/charts-fieldsurvey.js' %}"></script>
 {% endblock javascripts %}
