--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -210,8 +210,8 @@
       <!-- END filter charts -->
       <!-- START EXTRACTION CHARTS -->
       <div class="row mt-4">
-        <div class="col-lg-6 col-md-6 mt-4 mb-4">
-          <div class="bg-gray-200 card z-index-2 ">
+        <div class="bg-gray-200 card mb-3">
+          <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
@@ -226,6 +226,7 @@
             </div>
           </div>
         </div>
+      </div>
       <!-- END EXTRACTION CHARTS -->
       <div class="row mb-4">
         <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
