Added wetlab charts js to index for dashboard frontned

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -585,4 +585,5 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="{% static 'assets/js/plugins/palette.js' %}"></script>
 <script src="{% static 'assets/js/charts-fieldsurvey.js' %}"></script>
+<script src="{% static 'assets/js/charts-wetlab.js' %}"></script>
 {% endblock javascripts %}
