--- a/frontend/templates/home/django-material-kit/project-detail.html
+++ b/frontend/templates/home/django-material-kit/project-detail.html
@@ -42,14 +42,14 @@
               <h5 class="font-weight-bolder mt-3">Description</h5>
               <p class="pe-5">{{ project.project_description }}</p>
             {% endif %}
-            <div id="map_loading" class="d-flex justify-content-center">
+            <div id="mapLoading" class="d-flex justify-content-center">
               <button class="btn btn-primary" type="button" disabled>
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 Map Loading...
               </button>
             </div>
             <div id="map" data-url="{% url 'map_projectsurvey' pk %}"></div>
-            <div id="map_empty" class="d-flex justify-content-center lead"></div>
+            <div id="mapEmpty" class="d-flex justify-content-center lead"></div>
           </div>
         <!-- -------- END Grids -------- -->
       </div>
