--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -228,17 +228,17 @@
           <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
-                <div id="chartExtractionCountLoading" class="d-flex justify-content-center">
-                  <button class="btn btn-primary" type="button" disabled>
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                    Chart Loading...
-                  </button>
-                </div>
-                <div id="chartExtractionCountEmpty" class="mb-0 ">
                   <div class="chart">
+                    <div id="chartExtractionCountLoading" class="d-flex justify-content-center">
+                      <button class="btn btn-primary" type="button" disabled>
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Chart Loading...
+                      </button>
+                    </div>
+                    <h6 id="chartExtractionCountEmpty" class="mb-0 "></h6>
                     <canvas id="chartExtractionCount" data-url="{% url 'chart_extractioncount' %}" class="chart-canvas" height="250"></canvas>
                   </div>
-                </div>
+
               </div>
             </div>
             <div class="card-body">
