added loading spinner to frontend templateS

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -235,7 +235,7 @@
                         Chart Loading...
                       </button>
                     </div>
-                    <h6 id="chartExtractionCountEmpty" class="mb-4 text-center"></h6>
+                    <h6 id="chartExtractionCountEmpty" class="mb-4 mt-4 text-center"></h6>
                     <canvas id="chartExtractionCount" data-url="{% url 'chart_extractioncount' %}" class="chart-canvas" height="250"></canvas>
                   </div>
 
